--- a/css/vov_elabuga.css
+++ b/css/vov_elabuga.css
@@ -73,12 +73,13 @@ header ul li a {
 .info-about-soldier_one {
     margin-left: 25rem;
     font-size: 2em;
-    margin-top: -6em;
+    margin-top: -7.5em;
 }
 
 /* soldier 2 */
 .image-soldier_two {
     margin-left: 5px;
+    margin-bottom: 10em;
 }
 
 .info-about-soldier_two {
@@ -90,6 +91,7 @@ header ul li a {
 /* soldier 3 */
 .image-soldier_three {
     margin-left: 5px;
+    margin-bottom: 10em;
 }
 
 .info-about-soldier_three {
@@ -101,6 +103,7 @@ header ul li a {
 /* soldier 4 */
 .image-soldier_four {
     margin-left: 5px;
+    margin-bottom: 10em;
 }
 
 .info-about-soldier_four {
@@ -113,9 +116,23 @@ header ul li a {
 .image-soldier_five {
     margin-left: 5px;
     margin-top: 8em;
+    margin-bottom: 10em;
 }
 
 .info-about-soldier_five {
+    margin-left: 25rem;
+    font-size: 1.5em;
+    margin-top: -9em;
+}
+
+/* soldier 6 */
+.image-soldier_six {
+    margin-left: 5px;
+    margin-top: 8em;
+    margin-bottom: 10em;
+}
+
+.info-about-soldier_six {
     margin-left: 25rem;
     font-size: 1.5em;
     margin-top: -9em;
@@ -150,7 +167,7 @@ header ul li a {
 
 @media (max-width: 1200px) {
     .top-text-main section h1 {
-        font-size: 121%;
+        font-size: 170%;
     }
 
     .nav-item-img_img {
@@ -219,9 +236,263 @@ header ul li a {
     }
 }
 
-@media (max-width: 320px) {
+@media (max-width: 1000px) {
     .top-text-main section h1 {
-        font-size: 56%;
+        font-size: 90%;
+    }
+
+    .nav-item-img_img {
+        width: 20%;
+        margin-right: 29px;
+    }
+
+    /* soldier 1 */
+    .image-soldier_one {
+        width: 100%;
+        margin-top: -4em;
+        margin-bottom: -4em;
+    }
+
+    .info-about-soldier_one {
+        margin-left: 12.5rem;
+        font-size: 15px;
+        margin-top: -6rem;
+    }
+
+    /* soldier 2 */
+    .image-soldier_two {
+        width: 100%;
+        margin-top: -1em;
+    }
+
+    .info-about-soldier_two {
+        margin-left: 12.5rem;
+        font-size: 15px;
+        margin-top: -6rem;
+    }
+
+    /* soldier 3 */
+    .image-soldier_three {
+        width: 100%;
+        margin-top: -8em;
+    }
+
+    .info-about-soldier_three {
+        margin-left: 12.5rem;
+        font-size: 15px;
+        margin-top: -6rem;
+    }
+
+    /* soldier 4 */
+    .image-soldier_four {
+        width: 100%;
+        margin-top: -8em;
+    }
+
+    .info-about-soldier_four {
+        margin-left: 12.5rem;
+        font-size: 15px;
+        margin-top: -6rem;
+    }
+
+    /* soldier 5 */
+    .image-soldier_five {
+        width: 100%;
+        margin-top: -7em;
+    }
+
+    .info-about-soldier_five {
+        margin-left: 12.5rem;
+        font-size: 15px;
+        margin-top: -6rem;
+    }
+
+    /* soldier 6 */
+    .image-soldier_six {
+        width: 100%;
+        margin-top: -7em;
+    }
+
+    .info-about-soldier_six {
+        margin-left: 12.5rem;
+        font-size: 15px;
+        margin-top: -6rem;  
+    }
+}
+
+@media (max-width: 835px) {
+    .top-text-main section h1 {
+        font-size: 90%;
+    }
+
+    .nav-item-img_img {
+        width: 30%;
+        margin-right: 29px;
+    }
+
+    /* soldier 1 */
+    .image-soldier_one {
+        width: 100%;
+        margin-top: -4em;
+        margin-bottom: -4em;
+    }
+
+    .info-about-soldier_one {
+        margin-left: 11rem;
+        font-size: 15px;
+        margin-top: -6rem;
+    }
+
+    /* soldier 2 */
+    .image-soldier_two {
+        width: 100%;
+        margin-top: -1em;
+    }
+
+    .info-about-soldier_two {
+        margin-left: 11rem;
+        font-size: 15px;
+        margin-top: -6rem;
+    }
+
+    /* soldier 3 */
+    .image-soldier_three {
+        width: 100%;
+        margin-top: -8em;
+    }
+
+    .info-about-soldier_three {
+        margin-left: 11rem;
+        font-size: 15px;
+        margin-top: -6rem;
+    }
+
+    /* soldier 4 */
+    .image-soldier_four {
+        width: 100%;
+        margin-top: -8em;
+    }
+
+    .info-about-soldier_four {
+        margin-left: 11rem;
+        font-size: 15px;
+        margin-top: -6rem;
+    }
+
+    /* soldier 5 */
+    .image-soldier_five {
+        width: 100%;
+        margin-top: -7em;
+    }
+
+    .info-about-soldier_five {
+        margin-left: 11rem;
+        font-size: 15px;
+        margin-top: -6rem;
+    }
+
+    /* soldier 6 */
+    .image-soldier_six {
+        width: 100%;
+        margin-top: -7em;
+    }
+
+    .info-about-soldier_six {
+        margin-left: 11rem;
+        font-size: 15px;
+        margin-top: -6rem;  
+    }
+}
+
+@media (max-width: 505px) {
+    .top-text-main section h1 {
+        font-size: 70%;
+    }
+
+    .nav-item-img_img {
+        width: 38%;
+        margin-right: 29px;
+    }
+
+    /* soldier 1 */
+    .image-soldier_one {
+        width: 93%;
+        margin-top: -4em;
+        margin-bottom: -4em;
+    }
+
+    .info-about-soldier_one {
+        margin-left: 6.2rem;
+        font-size: 10px;
+        margin-top: -3.5rem;
+    }
+
+    /* soldier 2 */
+    .image-soldier_two {
+        width: 93%;
+        margin-top: -1em;
+    }
+
+    .info-about-soldier_two {
+        margin-left: 6.2rem;
+        font-size: 10px;
+        margin-top: -3.5rem;
+    }
+
+    /* soldier 3 */
+    .image-soldier_three {
+        width: 93%;
+        margin-top: -8em;
+    }
+
+    .info-about-soldier_three {
+        margin-left: 6.2rem;
+        font-size: 10px;
+        margin-top: -3.5rem;
+    }
+
+    /* soldier 4 */
+    .image-soldier_four {
+        width: 93%;
+        margin-top: -8em;
+    }
+
+    .info-about-soldier_four {
+        margin-left: 6.2rem;
+        font-size: 10px;
+        margin-top: -3.5rem;
+    }
+
+    /* soldier 5 */
+    .image-soldier_five {
+        width: 93%;
+        margin-top: -7em;
+    }
+
+    .info-about-soldier_five {
+        margin-left: 6.2rem;
+        font-size: 10px;
+        margin-top: -3.5rem;
+    }
+
+    /* soldier 6 */
+    .image-soldier_six {
+        width: 93%;
+        margin-top: -7em;
+    }
+
+    .info-about-soldier_six {
+        margin-left: 6.2rem;
+        font-size: 10px;
+        margin-top: -3.5rem;
+    }
+}
+
+
+
+@media (max-width: 427px) {
+    .top-text-main section h1 {
+        font-size: 50%;
     }
 
     .nav-item-img_img {
@@ -232,13 +503,182 @@ header ul li a {
     /* soldier 1 */
     .image-soldier_one {
         width: 126%;
+        margin-top: -4em;
+        margin-bottom: -4em;
+    }
+
+    .info-about-soldier_one {
+        margin-left: 7.2rem;
+        font-size: 8px;
+        margin-top: -3rem;
+    }
+
+    /* soldier 2 */
+    .image-soldier_two {
+        width: 126%;
         margin-top: -1em;
+    }
+
+    .info-about-soldier_two {
+        margin-left: 7.2rem;
+        font-size: 7px;
+        margin-top: -3rem;
+    }
+
+    /* soldier 3 */
+    .image-soldier_three {
+        width: 126%;
+        margin-top: -8em;
+    }
+
+    .info-about-soldier_three {
+        margin-left: 7.2rem;
+        font-size: 7px;
+        margin-top: -3rem;
+    }
+
+    /* soldier 4 */
+    .image-soldier_four {
+        width: 126%;
+        margin-top: -8em;
+    }
+
+    .info-about-soldier_four {
+        margin-left: 7.2rem;
+        font-size: 7px;
+        margin-top: -3rem;
+    }
+
+    /* soldier 5 */
+    .image-soldier_five {
+        width: 126%;
+        margin-top: -7em;
+    }
+
+    .info-about-soldier_five {
+        margin-left: 7.2rem;
+        font-size: 7px;
+        margin-top: -3rem;
+    }
+
+    /* soldier 6 */
+    .image-soldier_six {
+        width: 126%;
+        margin-top: -7em;
+    }
+
+    .info-about-soldier_six {
+        margin-left: 7.2rem;
+        font-size: 7px;
+        margin-top: -3rem;
+    }
+}
+
+@media (max-width: 375px) {
+    .top-text-main section h1 {
+        font-size: 50%;
+    }
+
+    .nav-item-img_img {
+        width: 38%;
+        margin-right: 29px;
+    }
+
+    /* soldier 1 */
+    .image-soldier_one {
+        width: 126%;
+        margin-top: -4em;
+        margin-bottom: -4em;
+    }
+
+    .info-about-soldier_one {
+        margin-left: 6.5rem;
+        font-size: 8px;
+        margin-top: -3rem;
+    }
+
+    /* soldier 2 */
+    .image-soldier_two {
+        width: 126%;
+        margin-top: -1em;
+    }
+
+    .info-about-soldier_two {
+        margin-left: 6.5rem;
+        font-size: 7px;
+        margin-top: -3rem;
+    }
+
+    /* soldier 3 */
+    .image-soldier_three {
+        width: 126%;
+        margin-top: -8em;
+    }
+
+    .info-about-soldier_three {
+        margin-left: 6.5rem;
+        font-size: 7px;
+        margin-top: -3rem;
+    }
+
+    /* soldier 4 */
+    .image-soldier_four {
+        width: 126%;
+        margin-top: -8em;
+    }
+
+    .info-about-soldier_four {
+        margin-left: 6.5rem;
+        font-size: 7px;
+        margin-top: -3rem;
+    }
+
+    /* soldier 5 */
+    .image-soldier_five {
+        width: 126%;
+        margin-top: -7em;
+    }
+
+    .info-about-soldier_five {
+        margin-left: 6.5rem;
+        font-size: 7px;
+        margin-top: -3rem;
+    }
+
+    /* soldier 6 */
+    .image-soldier_six {
+        width: 126%;
+        margin-top: -7em;
+    }
+
+    .info-about-soldier_six {
+        margin-left: 6.5rem;
+        font-size: 7px;
+        margin-top: -3rem;
+    }
+}
+
+@media (max-width: 320px) {
+    .top-text-main section h1 {
+        font-size: 50%;
+    }
+
+    .nav-item-img_img {
+        width: 38%;
+        margin-right: 29px;
+    }
+
+    /* soldier 1 */
+    .image-soldier_one {
+        width: 126%;
+        margin-top: -4em;
+        margin-bottom: -4em;
     }
 
     .info-about-soldier_one {
         margin-left: 5.5rem;
         font-size: 8px;
-        margin-top: -2.5rem;
+        margin-top: -3rem;
     }
 
     /* soldier 2 */
@@ -256,7 +696,7 @@ header ul li a {
     /* soldier 3 */
     .image-soldier_three {
         width: 126%;
-        margin-top: -1em;
+        margin-top: -8em;
     }
 
     .info-about-soldier_three {
@@ -268,7 +708,7 @@ header ul li a {
     /* soldier 4 */
     .image-soldier_four {
         width: 126%;
-        margin-top: -1em;
+        margin-top: -8em;
     }
 
     .info-about-soldier_four {
@@ -280,10 +720,22 @@ header ul li a {
     /* soldier 5 */
     .image-soldier_five {
         width: 126%;
-        margin-top: -1em;
+        margin-top: -7em;
     }
 
     .info-about-soldier_five {
+        margin-left: 5.5rem;
+        font-size: 7px;
+        margin-top: -3rem;
+    }
+
+    /* soldier 6 */
+    .image-soldier_six {
+        width: 126%;
+        margin-top: -7em;
+    }
+
+    .info-about-soldier_six {
         margin-left: 5.5rem;
         font-size: 7px;
         margin-top: -3rem;
