--- a/css/mp_elabuga.css
+++ b/css/mp_elabuga.css
@@ -70,11 +70,11 @@ header ul li a {
 }
 
 /* soldier 1 */
-.image-soldier_one {
+.image-mp_one {
     margin-left: 5px;
 }
 
-.info-about-soldier_one {
+.info-about-mp_one {
     margin-left: 25rem;
     font-size: 2em;
     margin-top: -7.5em;
